flicker fix

--- a/style/style.css
+++ b/style/style.css
@@ -122,7 +122,7 @@ text-decoration: none;
 li {
   font-family: 'Kaushan Script', cursive;
   font-family: 'Roboto', sans-serif;
-  background-image: url("http://www.nuflowwidebay.com.au/wp-content/uploads/2015/10/expences-button-png-hi.png");
+  background-image: url("navpic/nav.png");
 }
 
 /*Tartalom*/
@@ -137,9 +137,8 @@ background-image: linear-gradient(to bottom, white 20%, steelblue 55%);
 }
 .item {
 margin-top: 20px;
-margin-left:auto;
-margin-right: auto;
-
+margin-left: 5%;
+margin-right: 1%;
 }
 
 .itemlist{
